--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         <h1 class="faq_title">FAQ</h1>
 
         <div class="faq">
-          <div class="question">How many team members can I invite?<div id="arrow" class="arrow"><img
+          <div class="question">How many team members can I invite?<div class="arrow"><img
                 src="./images/icon-arrow-down.svg" alt=""></div>
           </div>
-          <div id="answer" class="answer">
+          <div class="answer">
             <p>You can invite up to 2 additional users on the Free plan. There is no limit on
               team members for the Premium plan.</p>
           </div>
         </div>
 
         <div class="faq">
-          <div class="question">What is the maximum file upload size?<div id="arrow" class="arrow"><img
+          <div class="question">What is the maximum file upload size?<div class="arrow"><img
                 src="./images/icon-arrow-down.svg" alt=""></div>
           </div>
           <div class="answer">
@@ -51,8 +51,8 @@
         </div>
 
         <div class="faq">
-          <div class="question">How do I reset my password?<div id="arrow" class="arrow"><img
-                src="./images/icon-arrow-down.svg" alt=""></div>
+          <div class="question">How do I reset my password?<div class="arrow"><img src="./images/icon-arrow-down.svg"
+                alt=""></div>
           </div>
           <div class="answer">
             <p>Click “Forgot password” from the login page or “Change password” from your profile
@@ -61,8 +61,8 @@
         </div>
 
         <div class="faq">
-          <div class="question">Can I cancel my subscription?<div id="arrow" class="arrow"><img
-                src="./images/icon-arrow-down.svg" alt=""></div>
+          <div class="question">Can I cancel my subscription?<div class="arrow"><img src="./images/icon-arrow-down.svg"
+                alt=""></div>
           </div>
           <div class="answer">
             <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
@@ -70,7 +70,7 @@
         </div>
 
         <div class="faq">
-          <div class="question">Do you provide additional support?<div id="arrow" class="arrow"><img
+          <div class="question">Do you provide additional support?<div class="arrow"><img
                 src="./images/icon-arrow-down.svg" alt=""></div>
           </div>
           <div class="answer">
